service.yaml
apiVersion: v1
kind: Service
metadata:
  name: development-service
spec:
  selector:
    app: development
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: production-service
spec:
  selector:
    app: production
  ports:
  - port: 8080
    targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: test
  ports:
  - port: 8080
    targetPort: 8080
